tests/class_statics/class_static_constructor.js
class A {
  static constructor: any; // error
}
